force-app/main/default/objects/Loop__Insert_Update__c/Loop__Insert_Update__c.object-meta.xml
<CustomObject>
    <description>Insert or update any Salesforce object records after a DDP has been completed.</description>
    <label>Insert-Update</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insert-Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>