force-app/main/default/objects/Loop__Insert_Update__c/fields/Loop__Order__c.field-meta.xml
<CustomField>
    <fullName>Loop__Order__c</fullName>
    <inlineHelpText>This number determines the sequence that the Insert-Updates will occur in.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>