force-app/main/default/objects/Loop__Insert_Update__c/fields/Loop__Use_Admin_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Loop__Use_Admin_Credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this Insert-Update will be executed using an administrator&apos;s credentials as specified on the DDP Admin tab.</inlineHelpText>
    <label>Use Admin Credentials</label>
    <type>Checkbox</type>
</CustomField>